# lucide

./: .pre-commit-config.yaml  Cargo.toml  README.md  package-lock.json  package.json
.github/: labels.yml
.github/workflows/: release.yml  upstream.yml
book/: book.toml
book-examples/dioxus/: Cargo.toml  index.html
book-examples/dioxus/src/: app.rs  icons.rs
book-examples/leptos/: Cargo.toml  tailwind.config.js
book-examples/leptos/src/: app.rs  icons.rs  main.rs
book-examples/yew/: Cargo.toml
book-examples/yew/src/: app.rs  icons.rs
book/src/: SUMMARY.md  introduction.md
book/src/frameworks/: README.md  dioxus.md  leptos.md  yew.md
scripts/: Cargo.toml
scripts/src/: framework.rs  generate.rs  lib.rs  metadata.rs  repository.rs
scripts/src/frameworks/: dioxus.rs  leptos.rs  yew.rs
