[workspace]
members = ["book-examples/*", "packages/*", "scripts"]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/lucide"
version = "0.1.0"

[workspace.dependencies]
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
dioxus = "0.5.6"
leptos = "0.7.0-rc2"
log = "0.4.22"
yew = "0.21.0"
