[package]
name = "lucide-yew-book"
description = "Book examples for Lucide Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
lucide-yew = { path = "../../packages/yew", optional = true }
yew = { workspace = true, features = ["csr"] }

[features]
default = []
icons = ["dep:lucide-yew"]
